apps/overlays/dev/fcihome-account/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fcihome-account
spec:
  selector:
    app.kubernetes.io/name: fcihome-account
  ports:
    - name: http
      port: 8000
      targetPort: http
