apps/overlays/dev/fcihome-account/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fcihome-account
spec:
  ingressClassName: traefik
  rules:
    - host: account.fcihome.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fcihome-account
                port:
                  name: http
